# cosmic-oracle

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
cosmic_oracle/: __init__.py  cli.py  engine.py  ui.py
